--- a/src/index.css
+++ b/src/index.css
@@ -47,14 +47,6 @@ li {
   justify-content: space-between;
 }
 
-.flex-end {
-  justify-content: flex-end;
-}
-
-.navActive {
-  color: green;
-}
-
 .work {
   display: flex;
   width: 100%;
@@ -96,10 +88,11 @@ li {
 }
 
 form {
-  width: 40%;
+  width: 30%;
   background-color: var(--tertiary-color);
   padding: 20px;
   margin: 10px;
+  border-radius: 10px;
 }
 
 input {
@@ -107,11 +100,38 @@ input {
   outline: none;
   border-radius: 3px;
   transition: box-shadow 0.2s;
+  margin: 10px;
+  padding: 5px;
+}
+
+textarea {
+  border: 1px solid var(--primary-color);
+  outline: none;
+  border-radius: 3px;
+  transition: box-shadow 0.2s;
+  margin: 5px 0 0 5px;
+}
+
+button {
+  margin: 12px 0 0 0;
+  padding: 2px;
+  background-color: var(--secondary-color);
+  color: white;
 }
 
 input:focus {
   border: 1px solid var(--secondary-color);
   box-shadow: 0 0 0.25rem rgba(0, 0, 0, 0.5);
+}
+
+.about p {
+  width: 80%;
+  margin: 10px;
+}
+
+.about img {
+  width: 10%;
+  margin: 10px;
 }
 
 .resume h3 {
